# rg_configured_search

./: README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
src/rg_configured_search/: __main__.py  cli.py  config_reader.py  searcher.py
test_data/: sample_config_1.yaml  test_data_inventory.md
